@@ -32,6 +32,7 @@ git-annex (3.20120124) UNRELEASED; urgency=low
   * addurl: Add --pathdepth option.
   * rekey: New plumbing level command, can be used to change the keys used
     for files en masse.
+  * Store web special remote url info in a more efficient location.
 
  -- Joey Hess <joeyh@debian.org>  Tue, 24 Jan 2012 16:21:55 -0400
 
